bundled_metadata/force-app/main/default/objects/Missing_Items__c/Missing_Items__c.object-meta.xml
<CustomObject>
    <label>Missing Items</label>
    <nameField>
        <label>Missing Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Missing Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>