bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Missing Items</relationshipLabel>
    <relationshipName>Missing_Items</relationshipName>
    <type>Lookup</type>
</CustomField>