bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/Cust_Id__c.field-meta.xml
<CustomField>
    <fullName>Cust_Id__c</fullName>
    <label>Customer Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>