bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/Delete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the KPI no longer has any missing item references as calculated by EDF</description>
    <label>Delete Flag</label>
    <type>Checkbox</type>
</CustomField>