bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/KPI_Id__c.field-meta.xml
<CustomField>
    <fullName>KPI_Id__c</fullName>
    <label>Kpi Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>