bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <length>2</length>
    <type>Text</type>
</CustomField>