bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/Modification_Date__c.field-meta.xml
<CustomField>
    <fullName>Modification_Date__c</fullName>
    <description>Modification Date</description>
    <label>Modification Date</label>
    <type>Date</type>
</CustomField>