bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/Object_Value__c.field-meta.xml
<CustomField>
    <fullName>Object_Value__c</fullName>
    <label>Object Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>