bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/Scoring__c.field-meta.xml
<CustomField>
    <fullName>Scoring__c</fullName>
    <label>Scoring</label>
    <length>40</length>
    <type>Text</type>
</CustomField>