bundled_metadata/force-app/main/default/objects/Missing_Items__c/fields/Scoring_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Opportunity__c</fullName>
    <label>Scoring Oportunity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>